FailedLogTest changes